--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
                 <label for="accEmail" id="accEmailLable">Email: </label>
                 <input type="email" id="accEmail" class="form-control" name="accEmail" required>
                 <br>
-                <label for="accContent" id="accContentLable">Email: </label>
+                <label for="accContent" id="accContentLable">content: </label>
                 <input type="content" id="accContent" class="form-control" name="accContent" required>
                 <br>
                 <input type="submit" class="btn btn-primary" value="Sign up">
