--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 
 
     <div class="formDiv">
-            <h2>Create an Account</h2>
+            <h2>Create an Post</h2>
             <form onsubmit="return createAccount()">
     
                 <br><br>
