--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </header>
 
-<body>
+<body onload="getItems()">
     <ul>
         <li><a href="register.html">Register</a></li>
         <li><a href="login.html">Login</a></li>
@@ -37,7 +37,7 @@
 
     </div>
 
-
+<script src='getall.js'></script>
 </body>
 
 </html>
